update try it out component

--- a/src/components/LeftSidebar/leftSidebar.module.css
+++ b/src/components/LeftSidebar/leftSidebar.module.css
@@ -9,6 +9,7 @@
 
 .navGroups {
   padding: 0 var(--space-10x) var(--space-10x) 0;
+  height: calc(100vh - var(--space-16x) - var(--space-16x)); /* Subtract header and footer height */
 
   overflow-y: auto;
   scrollbar-width: thin;
