--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,9 +22,11 @@ const formattedContentTitle = `${CONFIG.PAGE.titleFallback} | ${CONFIG.SITE.titl
       <Demos />
 
       <TechnicalStandards />
+    </div>
 
-      <CommunityEvents />
+    <CommunityEvents />
 
+    <div class="wrapper">
       <div class="recommended">
         <h4>Recommended reading</h4>
         <h2>We think you'd love to explore</h2>
@@ -145,11 +147,12 @@ const formattedContentTitle = `${CONFIG.PAGE.titleFallback} | ${CONFIG.SITE.titl
   .wrapper {
     display: flex;
     flex-direction: column;
-    gap: 82px;
     max-width: var(--fullwidth-max-width);
     padding: 0 var(--space-10x);
+    gap: 36px;
   }
 
+  /*800px*/
   @media (min-width: 50em) {
     .hero {
       max-width: var(--fullwidth-max-width);
@@ -189,7 +192,13 @@ const formattedContentTitle = `${CONFIG.PAGE.titleFallback} | ${CONFIG.SITE.titl
       line-height: var(--space-6x);
       margin-bottom: var(--space-2x);
     }
+
+    .wrapper {
+      gap: 82px;
+    }
   }
+
+  /* 992px */
   @media (min-width: 62em) {
     .hero {
       max-width: min(1200px, calc(100% - 2 * var(--space-16x)));
