--- a/src/components/CommunityEvents/CommunityEvents.astro
+++ b/src/components/CommunityEvents/CommunityEvents.astro
@@ -8,6 +8,7 @@ import styles from "./CommunityEvents.module.css"
 
 // Community event gallery images
 const galleryImages: GalleryImage[] = [
+  // Top row - scrolls left
   {
     id: "1",
     imageUrl:
@@ -44,6 +45,7 @@ const galleryImages: GalleryImage[] = [
       "https://cdn.prod.website-files.com/64cc2c23d8dbd707cdb556d8/677d1da974d919ae98a3bd42_home-community-10.webp",
     alt: "Chainlink community event",
   },
+  // Bottom row - scrolls right
   {
     id: "7",
     imageUrl:
