--- a/src/components/CommunityEvents/CommunityEvents.astro
+++ b/src/components/CommunityEvents/CommunityEvents.astro
@@ -92,7 +92,7 @@ const events = await fetchEventsFromRSS()
       Community Events
     </Typography>
 
-    <a href="https://dev.chain.link/events" class={styles.arrow}>
+    <a href="https://chain.link/community/events" class={styles.arrow}>
       <SvgArrowRight2 height={12} width={12} />
     </a>
   </header>
