--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,27 @@ const formattedContentTitle = `${CONFIG.PAGE.titleFallback} | ${CONFIG.SITE.titl
       <JourneyCards />
     </div>
 
-    <TryItOut />
+    <TryItOut
+      codeSampleSrc="/samples/ChainlinkFunctions/AutomatedFunctionsConsumerExample.sol"
+      accordionTabs={[
+        {
+          title: "Transfer Tokens Between Chains",
+          text: "Use Chainlink CCIP to transfer tokens from a smart contract to an account on a different blockchain.",
+        },
+        {
+          title: "Leverage MVR feeds",
+          text: "Use Multiple-Variable Response (MVR) feeds data in your consumer contracts on EVM chains using Solidity.",
+        },
+        {
+          title: "Fetch and Decode Real World Asset Streams",
+          text: "Use the Data Streams SDK for Go/Rust to fetch and decode reports from the Data Streams Aggregation Network.",
+        },
+        {
+          title: "Automate your Functions",
+          text: "Use Chainlink Automation to trigger the same functions regularly, such as fetching weather data daily or fetching an asset price on every block.",
+        },
+      ]}
+    />
 
     <div class="wrapper">
       <Demos />
