--- a/src/components/Resource/ResourceCard.astro
+++ b/src/components/Resource/ResourceCard.astro
@@ -1,27 +1,28 @@
 ---
-import { Typography, SvgArrowRight2 } from "@chainlink/blocks"
+import { Typography, SvgArrowRight2, SvgButtonPlay } from "@chainlink/blocks"
 import type { ImageMetadata } from "astro"
 import styles from "./ResourceCard.module.css"
+import { ResourceItem } from "./ResourceGrid.astro"
 
-interface Props {
-  image?: string | ImageMetadata
-  imageAlt?: string
-  label: string
-  link: string
-  description: string
-  type: "article" | "video"
-}
+type Props = ResourceItem
 
 const { image, imageAlt, label, link, description, type } = Astro.props
 
 const imageSrc = typeof image === "string" ? image : image?.src
+
+const isVideo = type === "video"
 ---
 
-<a href={link} class={styles.card}>
+<a href={link} class={styles.card} target={isVideo ? "_blank" : "_self"}>
   {
     imageSrc && (
       <div class={styles.imageWrapper}>
         <img src={imageSrc} alt={imageAlt} class={styles.image} />
+        <div class={styles.overlay}>
+          <span class={styles.playButtonWrapper}>
+            <SvgButtonPlay color="card" width={15} height={17.25} />
+          </span>
+        </div>
       </div>
     )
   }
