--- a/src/components/Resource/ResourceCard.module.css
+++ b/src/components/Resource/ResourceCard.module.css
@@ -20,11 +20,36 @@
   background-color: var(--muted);
 }
 
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.playButtonWrapper {
+  background-color: var(--brand);
+  width: 45px;
+  height: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  & svg {
+    color: var(--white);
+    fill: var(--white);
+  }
+}
+
 .imageWrapper {
   width: 100%;
   aspect-ratio: 16 / 9;
   overflow: hidden;
   border-radius: var(--space-2x);
+  position: relative;
 }
 
 .image {
