--- a/src/pages/certification.astro
+++ b/src/pages/certification.astro
@@ -27,9 +27,7 @@ const formattedContentTitle = `Chainlink Certifications | ${CONFIG.SITE.title}`
                   class="btn btn-primary btn-small btn-cert">Start learning</a
                 >
               </div>
-              <div class="margin-bottom space-4x"></div>
-              <div class="margin-bottom space-6x"></div>
-              <div>
+              <div class="cert-image-wrap">
                 <img
                   src="/images/certification/image-certificate.svg"
                   loading="lazy"
@@ -272,10 +270,6 @@ const formattedContentTitle = `Chainlink Certifications | ${CONFIG.SITE.title}`
     padding-right: 64px;
   }
 
-  .cont--cert {
-    max-width: 1200px;
-  }
-
   /* Section styles */
   .sec-big {
     padding-top: 80px;
@@ -328,21 +322,26 @@ const formattedContentTitle = `Chainlink Certifications | ${CONFIG.SITE.title}`
 
   /* Hero section */
   .col-cert {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 60px;
     align-items: center;
-    text-align: center;
-    padding: 60px 0;
+    padding: 80px 0;
   }
 
   .div-block-107 {
-    max-width: 800px;
-    margin-bottom: 40px;
+    max-width: 624px;
+  }
+
+  .cert-image-wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .display-500 {
-    font-size: 48px;
-    font-weight: 600;
+    font-size: 3em;
+    font-weight: 500;
     line-height: 1.2;
     margin-bottom: 24px;
   }
@@ -362,8 +361,7 @@ const formattedContentTitle = `Chainlink Certifications | ${CONFIG.SITE.title}`
   }
 
   .paragraph-certified {
-    max-width: 624px;
-    margin: 24px auto;
+    margin: 24px 0;
   }
 
   /* Buttons */
@@ -640,6 +638,11 @@ const formattedContentTitle = `Chainlink Certifications | ${CONFIG.SITE.title}`
       padding-right: 32px;
     }
 
+    .col-cert {
+      grid-template-columns: 1fr;
+      gap: 40px;
+    }
+
     .platform-tabs {
       grid-template-columns: 1fr;
       gap: 40px;
@@ -658,6 +661,10 @@ const formattedContentTitle = `Chainlink Certifications | ${CONFIG.SITE.title}`
     .cont {
       padding-left: 16px;
       padding-right: 16px;
+    }
+
+    .col-cert {
+      padding: 60px 0;
     }
 
     .display-500 {
